--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -10,20 +10,14 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :task_id %><br />
-    <%= f.number_field :task_id %>
-  </div>
+	<%= f.hidden_field :task_id %>
   <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
-  <div class="field">
-    <%= f.label :user %><br />
-    <%= f.text_field :user %>
-  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
+  
+  
 <% end %>
