--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -10,13 +10,16 @@
       </ul>
     </div>
   <% end %>
+  
 	<%= f.hidden_field :task_id %>
+  
+  
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description %>   
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create", :class => 'btn btn-info' %>
   </div>
   
   
