--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -14,7 +14,7 @@
   <tr>
     <td><%= note.task_id %></td>
     <td><%= note.description %></td>
-    <td><%= note.user %></td>
+    <td><%= note.user.email %></td>
     <td><%= link_to 'Show', note %></td>
     <td><%= link_to 'Edit', edit_note_path(note) %></td>
     <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
