--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,10 +1,12 @@
-<h1> HOME </h1>
+<div class="alert alert-info">
 
-  <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-    <div><%= f.label :email %><br />
+<h2>Sign in</h2>
+
+<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+  <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-    <div><%= f.label :password %><br />
+  <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
   <% if devise_mapping.rememberable? -%>
@@ -13,5 +15,6 @@
 
   <div><%= f.submit "Sign in" %></div>
 <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
