--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @task.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
-
       <ul>
       <% @task.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -10,35 +9,37 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+  
+	<div class="field">
+    Created by <%= current_user.email %>
   </div>
+  <br />
+  
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :title %>
+    <%= f.text_field :title, :class => "input-xlarge" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
-  <div class="field">
-    <%= f.label :status %><br />
-    <%= f.text_field :status %>
+  
+	<div class="field">
+    <%= f.label :due_date %>
+    <%= f.text_field :due_date, :id => :due_date_picker, :value => @task.due_date.blank? ? "" : @task.due_date.strftime("%m/%d/%Y") %>
   </div>
+	
   <div class="field">
-    <%= f.label :due_date %><br />
-    <%= f.datetime_select :due_date %>
+    <%= f.label :status %>
+    <%= f.select :status, options_for_select(%w[OPEN CLOSED]) %>
   </div>
+	
   <div class="field">
-    <%= f.label :created_by %><br />
-    <%= f.text_field :created_by %>
-  </div>
-  <div class="field">
-    <%= f.label :employer %><br />
+    <%= f.label :employer %>
     <%= f.text_field :employer %>
   </div>
-  <div class="field">
-    <%= f.label :comment %><br />
-    <%= f.text_field :comment %>
-  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
