--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,36 +1,28 @@
-<h1>Listing tasks</h1> 
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Status</th>
-    <th>Due date</th>
-    <th>Created by</th>
-    <th>Employer</th>
-    <th>Comment</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @tasks.each do |task| %>
-  <tr>
-    <td><%= task.title %></td>
-    <td><%= task.description %></td>
-    <td><%= task.status %></td>
-    <td><%= task.due_date %></td>
-    <td><%= task.user.email%></td>
-    <td><%= task.employer %></td>
-    <td><%= task.comment %></td>
-    <td><%= link_to 'Show', task %></td>
-    <td><%= link_to 'Edit', edit_task_path(task) %></td>
-    <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-
-</table>
+<table class="table table-bordered table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Created_Date</th>
+        <th>Task Description</th>
+        <th>Due_Date</th>
+        <th>Status</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+			<% @tasks.each do |task| %>
+				<tr>
+					<td><%= task.created_at.strftime("%b %d, %Y") %></td>
+					<td><%= task.title %></td>
+					<td><%= task.due_date.strftime("%b %d, %Y") %></td>
+					<td><%= task.status %></td>
+					<td width="12px"><%= link_to 'Show', task, :class => 'badge badge-success' %></td>
+					<td width="12px"><%= link_to 'Edit', edit_task_path(task), :class => 'badge badge-warning' %></td>
+					<td width="12px"><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'badge badge-important' %></td>
+				</tr>
+			<% end %>
+    </tbody>
+  </table>
 
 <br />
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to 'New Task', new_task_path, :class => 'btn btn-info' %> 
