--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New task</h1> 
-
 <%= render 'form' %>
 
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back', tasks_path, :class => 'btn btn-info' %>
